@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Tk-Getopt
-version:             0.49_52
+version:             0.49_53
 abstract:            ~
 license:             ~
 author:              ~
